<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SocketClientActivity">

    <EditText
        android:id="@+id/editTextSrvMessage2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSrvResponse2"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/textViewSrvResponse2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/srv_response_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextSrvMessage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSrvMessage1" />

    <TextView
        android:id="@+id/textViewSrvAddress"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/srv_address"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/editTextSrvAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/editTextSrvAddress"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPersonName"
        android:maxLength="256"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSrvAddress"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/textViewSrvPort"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/srv_port"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/editTextSrvPort"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/editTextSrvPort"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/port_hint"
        android:inputType="textPersonName"
        android:maxLength="5"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSrvPort"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewClnMessage"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/cln_message"
        app:layout_constraintBottom_toTopOf="@+id/editTextClnMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textViewSrvResponse1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/srv_response_1"
        app:layout_constraintBottom_toTopOf="@+id/editTextSrvMessage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendMessage" />

    <Button
        android:id="@+id/buttonSendMessage"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/send_message"
        app:layout_constraintBottom_toTopOf="@+id/textViewSrvResponse1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextClnMessage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="74dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="31dp" />

    <EditText
        android:id="@+id/editTextClnMessage"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textPersonName"
        android:maxLength="256"
        app:layout_constraintBottom_toTopOf="@+id/buttonSendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClnMessage" />

    <EditText
        android:id="@+id/editTextSrvMessage1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/textViewSrvResponse2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSrvResponse1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="190dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="76dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewProtocol"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.296">

        <RadioButton
            android:id="@+id/radioButtonTcp"
            android:layout_width="77dp"
            android:layout_height="33dp"
            android:text="@string/tcp" />

        <RadioButton
            android:id="@+id/radioButtonUdp"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/udp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewProtocol"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/protocol"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


</androidx.constraintlayout.widget.ConstraintLayout>
